@@ -85,7 +85,7 @@ const SEARCH_OTHER_ID = "search.other";
 // Browse page
 const GRID_MIN_WIDTH = 139;
 const GRID_MIN_HEIGHT = 195;
-const GRID_MAX_WIDTH = 208; // 183
+const GRID_MAX_WIDTH = 233; // 183
 const GRID_STEP = 5;
 const GRID_OTHER = {command:['other']};
 
