@@ -208,15 +208,6 @@ Vue.component('lms-ui-settings', {
     <v-divider></v-divider>
 
     <v-list-tile>
-     <v-list-tile-content @click="largeCovers = !largeCovers" class="switch-label">
-      <v-list-tile-title>{{i18n('Large covers')}}</v-list-tile-title>
-      <v-list-tile-sub-title>{{i18n("When possible, allow the grid view to show larger covers.")}}</v-list-tile-title>
-     </v-list-tile-content>
-     <v-list-tile-action><m3-switch v-model="largeCovers"></m3-switch></v-list-tile-action>
-    </v-list-tile>
-    <v-divider></v-divider>
-
-    <v-list-tile>
      <v-list-tile-content class="switch-label">
       <v-list-tile-title>{{i18n('Home screen items')}}</v-list-tile-title>
       <v-list-tile-sub-title>{{i18n('Check the standard items which you wish to appear on the home screen.')}}</v-list-tile-sub-title>
@@ -443,7 +434,6 @@ Vue.component('lms-ui-settings', {
             showRating: false,
             homeButton: false,
             powerButton: false,
-            largeCovers: false,
             width: 500,
             mediaControls: false,
             mediaControlsSupported: !queryParams.hide.has('mediaControls') && ('mediaSession' in navigator)
@@ -609,7 +599,6 @@ Vue.component('lms-ui-settings', {
             this.screensaver = this.$store.state.screensaver;
             this.homeButton = this.$store.state.homeButton;
             this.powerButton = this.$store.state.powerButton;
-            this.largeCovers = this.$store.state.largeCovers;
             this.mediaControls = this.$store.state.mediaControls;
             this.showItems=[{id: TOP_MYMUSIC_ID, name:i18n("My Music"), show:!this.hidden.has(TOP_MYMUSIC_ID)},
                             {id: TOP_RADIO_ID, name:i18n("Radio"), show:!this.hidden.has(TOP_RADIO_ID)},
@@ -720,7 +709,6 @@ Vue.component('lms-ui-settings', {
                       screensaver:this.screensaver,
                       homeButton:this.homeButton,
                       powerButton:this.powerButton,
-                      largeCovers:this.largeCovers,
                       showRating:this.showRating,
                       mediaControls:this.mediaControls
                   };
