@@ -216,7 +216,6 @@
 "LMS support forums":"Diskuzní fórum LMS",
 "LMS technical information":"Technické informace LMS",
 "Large":"Velká",
-"Large covers":"Větší obaly",
 "Large font size":"Velká velikost písma",
 "Last scan: %1":"Poslední aktualizace: %1",
 "Library":"Knihovna",
@@ -505,7 +504,6 @@
 "Weds":"St",
 "When navigating into lists, show a home button to quickly navigate to the main (home) screen. Otherwise navigating home can be achieved via a long-press on the back button.":"Při procházení seznamů zobrazit tlačítko domů pro rychlý návrat na hlavní (domovskou) obrazovku. Návratu domů lze jinak dosáhnout dlouhým stiskem tlačítka zpět.",
 "When no song is playing on current player, darken screen (and show date & time) after 60 seconds.":"Pokud se na aktuálním přehrávači nepřehrává žádná skladba, ztmavit po 60 sekundách obrazovku (a zobrazit datum a čas).",
-"When possible, allow the grid view to show larger covers.":"Pokud je to možné, nechat v zobrazení mřížky zobrazit větší obaly.",
 "With":"S",
 "Without":"Bez",
 "Year":"Rok",
