@@ -233,7 +233,6 @@
 "LMS support forums":"LMS supportforum",
 "LMS technical information":"LMS teknisk information",
 "Large":"Stor",
-"Large covers":"Store albumomslag",
 "Large font size":"Stor fontstørrelse",
 "Last scan: %1":"Sidste skanning: '%1'",
 "Leave individual player's volume.":"Undlad at ændre lydstyrken på de enkelte afspillere",
@@ -544,7 +543,6 @@
 "Weds":"Ons",
 "When navigating into lists, show a home button to quickly navigate to the main (home) screen. Otherwise navigating home can be achieved via a long-press on the back button.":"Når der navigeres i lister, vis en hjem knap for hurtigt at komme til forsiden. Derudover kan dette opnås ved et langt tryk på tilbageknappen.",
 "When no song is playing on current player, darken screen (and show date & time) after 60 seconds.":"Hvis intet nummer bliver afspillet på nuværende afspiller, gør skærmen mørkere (og vis dato og tid) efter 60 sekunder.",
-"When possible, allow the grid view to show larger covers.":"Når muligt, vis store albumomslag i gittervisningen",
 "With":"Med",
 "Without":"Uden",
 "Year":"År",
