@@ -233,7 +233,6 @@
 "LMS support forums":"Logitech Media Server Support-Foren",
 "LMS technical information":"LMS technische Informationen",
 "Large":"Groß",
-"Large covers":"Große Cover",
 "Large font size":"Große Schrift",
 "Last scan: %1":"Letztes Durchsuchen: %1",
 "Leave individual player's volume.":"Individuelle Lautstärke der Player beibehalten.",
@@ -544,7 +543,6 @@
 "Weds":"Mit",
 "When navigating into lists, show a home button to quickly navigate to the main (home) screen. Otherwise navigating home can be achieved via a long-press on the back button.":"Zeige beim Navigieren in Listen einen Home-Knopf zum schnellen Wechsel auf den Startbildschirm. Alternativ kann lang auf den Zurück-Knopf gedrückt werden, um zum Startbildschirm zu gelangen.",
 "When no song is playing on current player, darken screen (and show date & time) after 60 seconds.":"Bildschirm nach 60 Sekunden abdunkeln (und Datum & Zeit anzeigen), wenn nichts wiedergegeben wird.",
-"When possible, allow the grid view to show larger covers.":"Größere Cover in Kachelansicht anzeigen, sofern möglich",
 "With":"mit",
 "Without":"ohne",
 "Year":"Jahr",
