@@ -233,7 +233,6 @@
 "LMS support forums":"Forum du support LMS",
 "LMS technical information":"Informations techniques LMS",
 "Large":"Grand(e)",
-"Large covers":"Grandes pochettes",
 "Large font size":"Police de grande taille",
 "Last scan: %1":"Dernière analyse : %1",
 "Leave individual player's volume.":"Laisser le volume des lecteurs.",
@@ -544,7 +543,6 @@
 "Weds":"Me",
 "When navigating into lists, show a home button to quickly navigate to the main (home) screen. Otherwise navigating home can be achieved via a long-press on the back button.":"Lors du parcours des listes, afficher un bouton permettant un accès rapide à l'écran d'accueil. Par défaut, le retour à l'écran d'accueil peut être effectué par un appui long sur le bouton de retour.",
 "When no song is playing on current player, darken screen (and show date & time) after 60 seconds.":"Lorsqu'aucune chanson n'est en cours de lecture sur la platine actuelle, assombrir l'écran (et afficher la date et l'heure) après 60 secondes.",
-"When possible, allow the grid view to show larger covers.":"Dans la mesure du possible, afficher des pochettes plus grandes dans la vue 'grille'.",
 "With":"Avec",
 "Without":"Sans",
 "Year":"Année",
