@@ -410,7 +410,6 @@
 "Keyboard shortcuts":"",
 "LMS technical information":"",
 "Large":"",
-"Large covers":"",
 "Large font size":"",
 "Leave individual player's volume.":"",
 "Light":"",
@@ -585,7 +584,6 @@
 "Volume (%)":"",
 "When navigating into lists, show a home button to quickly navigate to the main (home) screen. Otherwise navigating home can be achieved via a long-press on the back button.":"",
 "When no song is playing on current player, darken screen (and show date & time) after 60 seconds.":"",
-"When possible, allow the grid view to show larger covers.":"",
 "With":"",
 "Without":"",
 "Year":"",
