@@ -233,7 +233,6 @@
 "LMS support forums":"LMS support forum",
 "LMS technical information":"LMS technische informatie",
 "Large":"Groot",
-"Large covers":"Grote albumhoezen",
 "Large font size":"Grote lettergrootte",
 "Last scan: %1":"Laatste scan: %1",
 "Leave individual player's volume.":"Laat het volume van de individuele muziekspeler staan.",
@@ -544,7 +543,6 @@
 "Weds":"Wo",
 "When navigating into lists, show a home button to quickly navigate to the main (home) screen. Otherwise navigating home can be achieved via a long-press on the back button.":"Toon bij het navigeren een home knop om snel naar het startscherm te gaan. Anders kan naar het startscherm worden genavigeerd door lang op de terugknop te drukken.",
 "When no song is playing on current player, darken screen (and show date & time) after 60 seconds.":"Scherm donkerder maken (en datum en tijd laten zien) na 60 seconden, als er geen nummer wordt afgespeeld op de huidige muziekspeler.",
-"When possible, allow the grid view to show larger covers.":"Indien mogelijk, toon grote albumhoezen in rasterweergave.",
 "With":"Met",
 "Without":"Zonder",
 "Year":"Jaar",
