@@ -240,7 +240,6 @@
 "LMS support forums":"",
 "LMS technical information":"",
 "Large":"",
-"Large covers":"",
 "Large font size":"",
 "Last scan: %1":"",
 "Leave individual player's volume.":"",
@@ -559,7 +558,6 @@
 "Weds":"",
 "When navigating into lists, show a home button to quickly navigate to the main (home) screen. Otherwise navigating home can be achieved via a long-press on the back button.":"",
 "When no song is playing on current player, darken screen (and show date & time) after 60 seconds.":"",
-"When possible, allow the grid view to show larger covers.":"",
 "With":"",
 "Without":"",
 "Year":"",
