@@ -226,7 +226,6 @@
 "LMS support forums":"LMS 支援論壇",
 "LMS technical information":"LMS 技術資訊",
 "Large":"大",
-"Large covers":"大型封面",
 "Large font size":"大型文字",
 "Last scan: %1":"最後掃描：%1",
 "Leave individual player's volume.":"留下個別播放器的音量。",
@@ -532,7 +531,6 @@
 "Weds":"四",
 "When navigating into lists, show a home button to quickly navigate to the main (home) screen. Otherwise navigating home can be achieved via a long-press on the back button.":"導航到清單時，顯示首頁按鈕以快速導航到首頁。否則，可以通過長按返回按鈕來導航回首頁。",
 "When no song is playing on current player, darken screen (and show date & time) after 60 seconds.":"當目前播放器沒有播放歌曲時，60 秒後螢幕將會變暗（顯示日期和時間）。",
-"When possible, allow the grid view to show larger covers.":"如果可能，允許網格檢視來顯示更大的封面圖片。",
 "With":"與",
 "Without":"不與",
 "Year":"年份",
