@@ -56,6 +56,8 @@
 45. Don't apply reverse sort to 'New Music'.
 46. Fix image position and size in biographies.
 47. Show image in browse sub-toolbar if wide enough.
+48. Remove option for larger covers, and instead allow (slightly) larger
+    covers by default.
 
 3.5.6
 -----
